chore: String writing optimization
Motivation:

Inspired from perfio: https://github.com/szeiger/perfio